--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>4noobs</title>
+    <meta
+      name="description"
+      content="4noobs é um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
+    />
+    <meta property="og:title" content="4noobs" />
+    <meta
+      property="og:description"
+      content="4noobs é um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/images/4noobs_slogan.svg" />
+    <meta
+      name="keywords"
+      content="He4rt, He4rt Developers, He4rt devs, 4noobs, 4noobs web, 4noobs-web"
+    />
+    <meta name="author" content="Danilo Macedo Bakun" />
 
     <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/default.min.css"
     />
-
-    <title>4noobs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
