minor changes on SEO

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <title>4noobs</title>
     <meta
       name="description"
-      content="4noobs é um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
+      content="É um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
     />
     <meta property="og:title" content="4noobs" />
     <meta
       property="og:description"
-      content="4noobs é um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
+      content="É um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/images/4noobs_slogan.svg" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/he4rt.png" />
     <meta
       name="keywords"
       content="He4rt, He4rt Developers, He4rt devs, 4noobs, 4noobs web, 4noobs-web"
