adding meta url, twitter tags and changing image

--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,33 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="author" content="Danilo Macedo Bakun" />
     <title>4noobs</title>
     <meta
       name="description"
       content="É um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
     />
+
     <meta property="og:title" content="4noobs" />
     <meta
       property="og:description"
       content="É um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/images/he4rt.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/4noobs_slogan.png" />
+    <meta property="og:url" content="https://4noobs.netlify.app/" />
     <meta
       name="keywords"
       content="He4rt, He4rt Developers, He4rt devs, 4noobs, 4noobs web, 4noobs-web"
     />
-    <meta name="author" content="Danilo Macedo Bakun" />
+
+    <meta name="twitter:title" content="4noobs " />
+    <meta
+      name="twitter:description"
+      content="É um projeto feito pela comunidade He4rt Developers para  ensinar programação com qualidade, em português e de forma gratuita."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/4noobs_slogan.png" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet" />
     <link
